[gd_scene load_steps=21 format=2]

[ext_resource path="res://Sprites/demon_idle_noborder/1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Components/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Temp/bg.png" type="Texture" id=3]
[ext_resource path="res://Sprites/demon_idle_noborder/9.png" type="Texture" id=4]
[ext_resource path="res://Sprites/demon_idle_noborder/12.png" type="Texture" id=5]
[ext_resource path="res://Sprites/demon_idle_noborder/11.png" type="Texture" id=6]
[ext_resource path="res://Sprites/demon_idle_noborder/10.png" type="Texture" id=7]
[ext_resource path="res://Sprites/demon_idle_noborder/8.png" type="Texture" id=8]
[ext_resource path="res://Sprites/demon_idle_noborder/7.png" type="Texture" id=9]
[ext_resource path="res://Sprites/demon_idle_noborder/6.png" type="Texture" id=10]
[ext_resource path="res://Sprites/demon_idle_noborder/5.png" type="Texture" id=11]
[ext_resource path="res://Sprites/demon_idle_noborder/4.png" type="Texture" id=12]
[ext_resource path="res://Sprites/demon_idle_noborder/3.png" type="Texture" id=13]
[ext_resource path="res://Sprites/demon_idle_noborder/2.png" type="Texture" id=14]
[ext_resource path="res://Scripts/PlayerSM.gd" type="Script" id=15]
[ext_resource path="res://Scenes/Components/Camera2D.gd" type="Script" id=16]
[ext_resource path="res://Sprites/side_noborder.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.93462, 29.0285 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.886, 2.52031 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.994 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 3.5
drag_margin_left = 0.1
drag_margin_top = 0.75
script = ExtResource( 16 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera2D"]
layer = -1
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_offset = Vector2( 0, 1000 )
motion_mirroring = Vector2( 1024, 2048 )

[node name="Sprite" type="Sprite" parent="Camera2D/ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 3 )
centered = false

[node name="ShiftTween" type="Tween" parent="Camera2D"]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 29.554 )
shape = SubResource( 3 )

[node name="DropThru" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="DropThru"]
position = Vector2( 10.882, 32.125 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="DropThru"]
position = Vector2( 0, 32.125 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="DropThru"]
position = Vector2( -10.882, 32.125 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 2

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 15 )
[connection signal="grounded_updated" from="." to="Camera2D" method="_on_Player_grounded_updated"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
